--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/reset-css/reset.css" />
   <!-- endbower -->
 </head>
 <body>
